fixed spacing and font weight for cv page.

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -267,6 +267,7 @@ h2, h2 a {
     float:right;
     border:2px solid black;
     margin:20px 10px -10px 0px;
+    width:555px;
     height:185px;
     font-size:20px;
 }
@@ -275,8 +276,7 @@ h2, h2 a {
     margin-bottom: 20px;
     margin-top:20px;
     padding: 10px;
-    border: 1px solid transparent;
-    width: 830px;
+    width: 900px;
     height:462px;
     border-radius: 10px 10px;
     /*border-radius:58% 42% 62% 38% / 26% 34% 66% 74% ;*/
@@ -286,7 +286,7 @@ h2, h2 a {
 .exp h1{
     font-family: 'Open Sans', sans-serif;
     font-weight: 600;
-    font-size:40px;
+    font-size:50px;
     margin-left:20px;
     position: relative;
     text-transform: uppercase;
@@ -297,7 +297,7 @@ h2, h2 a {
     color: #C25100;
     font-family: 'Playfair Display', serif;
     font-weight:800;
-    font-size:25px;
+    font-size:27px;
     position: relative;
     display: inline-block;
     text-transform: lowercase;
@@ -317,7 +317,7 @@ h2, h2 a {
     height:316px;
     padding: 5px;
     font-weight:400;
-    margin: 20px 15px 0px 16px;
+    margin: 20px 15px 0px 45px;
     color:#C25100;
     background-color:white;
     /*background-image:linear-gradient(to bottom right, #C25100, rgb(243, 199, 76));
@@ -337,7 +337,7 @@ h2, h2 a {
 
 .desc {
     float:left;
-    width:550px;
+    width:570px;
     font-family: 'Roboto', sans-serif;
     height:315px;
     padding: 18px 25px;
